Harden launch auth and CORS configuration